<resources>
    <string name="app_name" translatable="false">Derailer</string>
    <string name="notification_player">Player</string>
    <string name="notification_next">Next</string>
    <string name="notification_lost">Lost</string>
    <string name="settings_header">Game settings</string>
    <string name="settingCards">Options</string>
    <string name="playerSelection">Player selection (drag&amp;drop)</string>
    <string name="option_connections">Connections</string>

    <string name="human">Human</string>
    <string name="ai">AI</string>

    <string name="label_player">Player %d</string>
    <string name="label_ai">AI %d</string>

    <string name="theme_steam_engine">Steam locomotive</string>
    <string name="theme_electric_engine">Electric engine</string>
    <string name="theme_vintage_car">Vintage car</string>
    <string name="theme_cadillac">Cadillac</string>

    <string name="option_victory">Victory</string>
    <string name="option_collision">Collision</string>
    <string name="option_obstacle">Obstacles</string>
    <string name="option_draw">Draw</string>
    <string name="option_order">Order</string>
    <string name="option_daynight">Day/Night</string>
    <string name="option_suddendeath">Sudden death</string>

    <string name="option_collision_on">On</string>
    <string name="option_collision_off">Off</string>
    <string name="option_victory_last">Last one</string>
    <string name="option_victory_dist">Distance</string>
    <string name="option_obstacle_none">None</string>
    <string name="option_obstacle_few">Few</string>
    <string name="option_obstacle_many">Many</string>
    <string name="option_daynight_01">Day</string>
    <string name="option_daynight_02">Night</string>
    <string name="option_draw_01">Fill hand</string>
    <string name="option_draw_02">All new</string>
    <string name="option_order_01">Keep same</string>
    <string name="option_order_02">Random</string>
    <string name="option_suddendeath_01">Off</string>
    <string name="option_suddendeath_02">On</string>
    <string name="option_connections_4">Four</string>
    <string name="option_connections_8">Eight</string>

    <string name="play_card">Play card</string>
    <string name="game_over">Game Over</string>
    <string name="place1" translatable="false">1</string>
    <string name="place2" translatable="false">2</string>
    <string name="place3" translatable="false">3</string>
    <string name="example_distance" translatable="false">25</string>
    <string name="play_with_spaces">"   Play   "</string>
    <string name="start_with_spaces">"       Start       "</string>
    <string name="theme_with_spaces">"   Theme   "</string>
    <string name="select_a_theme">Select a theme</string>
    <string name="too_few">Too few</string>
    <string name="add_at_least_two_players">Add at least two players!</string>
    <string name="winner_is">Winner is:</string>
    <string name="nobody">Nobody</string>
    <string name="restart">restart</string>
    <string name="main_menu">main menu</string>
    <string name="example_players_num">2</string>
    <string name="example_theme_title">Title</string>
    <string name="player">Player</string>
    <string name="spaces">"           "</string>
    <string name="delete">Delete</string>
    <string name="choose_your_start_spot">Choose your start spot</string>
    <string name="on_to">"On to "</string>
    <string name="place_a_tile">Place a tile</string>
    <string name="kaboom">Kaboom</string>
    <string name="is_out">is out!</string>

    <string name="sound_settings">Sound settings</string>
    <string name="music">Music</string>
    <string name="sfx">Effects</string>

    <string name="title_main" translatable="false">Main</string>
    <string name="title_game_settings" translatable="false">Game settings</string>
    <string name="title_game" translatable="false">Game</string>
    <string name="title_theme_selection" translatable="false">Theme selection</string>
    <string name="title_game_over" translatable="false">Game over</string>
    <string name="next">Next up</string>
    <string name="themes_upcoming">More themes coming soon</string>

</resources>
