<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gras">


    <RelativeLayout
        android:id="@+id/rl_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/iv_n_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/notification_background"/>

        <ImageView
            android:id="@+id/iv_n_player_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_n_textbig"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:src="@drawable/theme01_cart01_color"/>

        <ImageView
            android:id="@+id/iv_n_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_n_textbig"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:src="@drawable/theme01_cart01"/>

        <TextView
            android:id="@+id/tv_n_texttop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="-10dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/notification_next"/>

        <TextView
            android:id="@+id/tv_n_textbig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="50sp"
            android:layout_below="@+id/tv_n_texttop"
            android:text="@string/notification_player"/>

        <TextView
            android:id="@+id/tv_n_textbottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_below="@+id/tv_n_textbig"
            android:layout_marginTop="-10dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/notification_lost"/>


    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/train_bottom_control_bg"
        android:paddingBottom="@dimen/activity_vertical_margin_small"
        android:layout_alignParentBottom="true">


        <de.badgersburrow.derailer.views.GameButton
            android:id="@+id/gb_back"
            android:layout_width="@dimen/game_button"
            android:layout_height="@dimen/game_button"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_exit_state" />

        <de.badgersburrow.derailer.views.GameButton
            android:id="@+id/gb_horn"
            android:layout_width="@dimen/game_button"
            android:layout_height="@dimen/game_button"
            android:background="@drawable/button_horn_state" />

        <de.badgersburrow.derailer.views.GameTextButton
            android:id="@+id/bt_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_card"
            android:textSize="30sp"
            android:textColor="@color/textColorLight"
            android:gravity="center"
            android:maxLines="1"
            android:padding="@null"
            android:background="@drawable/button_play_state"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>


    </LinearLayout>
</RelativeLayout>