<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_content_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_settings"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_header_text_size"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:clipChildren="false">

            <TextView
                android:id="@+id/tv_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dialog_content_text_size"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <SeekBar
                android:id="@+id/sb_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="50"
                android:max="100"
                android:paddingHorizontal="16dp"
                android:thumb="@drawable/switch_thumb_checked"
                android:progressDrawable="@drawable/switch_track"/>

        </androidx.appcompat.widget.LinearLayoutCompat>



        <Switch
            android:id="@+id/sw_sfx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sfx"
            android:textSize="@dimen/dialog_content_text_size"
            android:track="@drawable/switch_track"
            android:thumb="@drawable/switch_thumb"
            android:textOn=" "
            android:textOff=" "
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <de.badgersburrow.derailer.views.DialogButton
        android:id="@+id/db_ok"
        android:layout_width="@dimen/dialog_close_size"
        android:layout_height="@dimen/dialog_close_size"
        android:background="@drawable/dialog_close_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintTop_toTopOf="@+id/ll_content"
        app:layout_constraintBottom_toTopOf="@+id/ll_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>