<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gras">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin_small"
            android:background="@drawable/train_header_sign_bg"
            android:text="@string/settings_header"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/playerSelection"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <RelativeLayout
            android:id="@+id/rl_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/iv_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/v_divider"
                android:src="@drawable/human_icon"
                android:tag="Player" />

            <View
                android:id="@+id/v_divider"
                android:layout_width="2dp"
                android:layout_height="@dimen/divider_height"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/grey" />

            <RelativeLayout
                android:id="@+id/rl_ai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/v_divider"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_ai_easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ai_easy_icon"
                    android:tag="Easy"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"/>

                <ImageView
                    android:id="@+id/iv_ai_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin_small"
                    android:layout_marginBottom="@dimen/activity_vertical_margin_small"
                    android:src="@drawable/ai_normal_icon"
                    android:tag="Normal"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/iv_ai_easy"/>

                <ImageView
                    android:id="@+id/iv_ai_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_ai_easy"
                    android:layout_centerHorizontal="true"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ai_hard_icon"
                    android:tag="Hard" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_human"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_toStartOf="@+id/iv_player"
                android:text="@string/human"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/tv_ai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/rl_ai"
                android:text="@string/ai"
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_small" >
            <de.badgersburrow.derailer.views.ButtonRecyclerView
                android:id="@+id/rv_carts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/bt_carts_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin_small"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:elevation="@dimen/elevation"
                android:background="@drawable/button_left_state" />

            <Button
                android:id="@+id/bt_carts_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_right_state"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_small"
                android:elevation="@dimen/elevation"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/settingCards"
            android:textAppearance="@android:style/TextAppearance.Large" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:weightSum="1" />

        <TextView
            android:id="@+id/tv_connections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/connections"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <RelativeLayout
            android:id="@+id/rl_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_connections"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin_small"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin_small"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_small">


            <ImageView
                android:id="@+id/tv_conn_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="-20dp"
                android:layout_toStartOf="@+id/tb_toggle"
                android:adjustViewBounds="true"
                android:src="@drawable/connections_04"/>

            <ImageView
                android:id="@+id/tv_conn_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="-20dp"
                android:layout_toEndOf="@+id/tb_toggle"
                android:adjustViewBounds="true"
                android:src="@drawable/connections_08"/>

            <ToggleButton
                android:id="@+id/tb_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/train_toggle_anim"
                android:textOff=""
                android:textOn="" />

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/activity_vertical_margin_small"
        android:background="@drawable/train_bottom_control_bg"
        android:visibility="gone">

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/bt_back"
            android:background="@drawable/button_back_state"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>




        <de.badgersburrow.derailer.views.GameTextButton
            android:id="@+id/bt_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_with_spaces"
            android:textSize="30sp"
            android:gravity="center"
            android:maxLines="1"
            android:padding="@null"
            android:textColor="@color/textColorLight"
            android:background="@drawable/button_play_state"/>

    </LinearLayout>


    <de.badgersburrow.derailer.views.GameSignButton
        android:id="@+id/gsb_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/sign_offset"
        android:layout_marginBottom="@dimen/sign_offset"
        app:position="start"
        app:shadow="@drawable/sign_back_shadow"
        app:sign="@drawable/sign_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin_small"
        android:layout_toStartOf="@+id/gsb_play" />

    <de.badgersburrow.derailer.views.GameSignButton
        android:id="@+id/gsb_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/sign_offset"
        android:layout_marginBottom="@dimen/sign_offset"
        app:position="end"
        app:shadow="@drawable/sign_play_shadow"
        app:sign="@drawable/sign_play" />

</RelativeLayout>
